# siis-rev

./: .gitignore  INSTALL  README  README.md  requirements.txt
strategies/: CMakeLists.txt  README  TODO  siis.config  siis.files  siis.includes
strategies.old/src/strategies/forexalpha/: CMakeLists.txt  Makefile  cmake_install.cmake  faaanalyser.h  facanalyser.h  fadanalyser.h  forexalpha.cpp  forexalpha.h
strategies/config/: strategy.json.template
strategies/config/strategies/: specific.json.template
strategies/include/siis/: asset.h  base.h  constants.h  dataarray.h  datacircular.h  datasource.h  economicevent.h  handler.h  logger.h  market.h  ohlc.h  order.h  position.h  strategy.h  terminal.h  tick.h  tradingsession.h  worker.h
strategies/include/siis/analysers/: analyser.h  rangebaranalyser.h  reversalbaranalyser.h  stdanalyser.h  timeframebaranalyser.h
strategies/include/siis/cache/: cache.h  tradecache.h
strategies/include/siis/config/: config.h  jsonparser.h  strategyconfig.h
strategies/include/siis/connector/: accountsignal.h  assetsignal.h  basesignal.h  connector.h  localconnector.h  marketsignal.h  ordersignal.h  positionsignal.h  statussignal.h  subscription.h  traderproxy.h  zmqconnector.h
strategies/include/siis/database/: database.h  economiceventdb.h  economiceventstream.h  marketdb.h  ohlcdb.h  ohlcstream.h  rangebardb.h  tickstream.h  tradedb.h
strategies/include/siis/display/: displayer.h  ncursesdisplayer.h  ttydisplayer.h
strategies/include/siis/indicators/: indicator.h
strategies/include/siis/learning/: stdsupervisor.h  supervisor.h
strategies/include/siis/monitor/: monitor_old.h  redismonitor.h
strategies/include/siis/statistics/: statistics.h  statisticstojson.h
strategies/include/siis/stats/: tradereport.h
strategies/include/siis/trade/: assettrade.h  breakeven.h  dynamicstoploss.h  entry.h  entryexit.h  indmargintrade.h  margintrade.h  positiontrade.h  stdtrademanager.h  stoploss.h  takeprofit.h  trade.h  trademanager.h  tradeoperation.h  tradesignal.h
strategies/include/siis/utils/: common.h  math.h  ohlcgen.h  rangeohlcgen.h  reversalohlcgen.h  timeframeohlcgen.h
strategies/src/: CMakeLists.txt  dataarray.cpp  logger.cpp  main.cpp  market.cpp  poolworker.cpp  position.cpp  strategy.cpp  tradingsession.cpp  worker.cpp
strategies/src/analysers/: analyser.cpp  rangebaranalyser.cpp  reversalbaranalyser.cpp  stdanalyser.cpp  timeframebaranalyser.cpp
strategies/src/backtest/: backtest.cpp  backtest.h
strategies/src/cache/: cache.cpp
strategies/src/cache/redis/: rediscache.cpp  rediscache.h  redistradecache.cpp  redistradecache.h
strategies/src/config/: config.cpp  jsonparser.cpp  strategyconfig.cpp
strategies/src/connector/: localconnector.cpp  localconnectorasset.cpp  localconnectorfifomargin.cpp  localconnectorindmargin.cpp  localconnectorposition.cpp  traderproxy.cpp  zmqconnector.cpp
strategies/src/connector/messages/: connectormessagecancelorder.cpp  connectormessagecloseposition.cpp  connectormessagecore.cpp  connectormessagecreateorder.cpp  connectormessagelistorders.cpp  connectormessagelistpositions.cpp  connectormessagemodifyposition.cpp  connectormessagereceiveohlc.cpp  connectormessagereceiveohlcarray.cpp  connectormessagereceivetick.cpp  connectormessagereceivetickaggreged.cpp  connectormessagereceivetickarray.cpp  connectormessagesignals.cpp  connectormessagesubscribe.cpp  connectormessageunsubscribe.cpp
strategies/src/database/: database.cpp  ohlcstream.cpp  rangebardb.cpp  tickstream.cpp
strategies/src/database/mysql/: economiceventdb.h  mysql.cpp  mysql.h  mysqlmarketdb.cpp  mysqlmarketdb.h  mysqlohlcdb.cpp  mysqlohlcdb.h  mysqlrangebardb.cpp  mysqlrangebardb.h
strategies/src/database/pgsql/: economiceventdb.h  pgsql.cpp  pgsql.h  pgsqlmarketdb.cpp  pgsqlmarketdb.h  pgsqlohlcdb.cpp  pgsqlohlcdb.h  pgsqlrangebardb.cpp  pgsqlrangebardb.h  pgsqltradedb.h
strategies/src/display/: displayer.cpp  ncursesdisplayer.cpp  ttydisplayer.cpp
strategies/src/indicators/adx/: adx.cpp
strategies/src/indicators/atr/: atr.cpp
strategies/src/indicators/awesome/: awesome.cpp
strategies/src/indicators/bbands/: bbands.cpp
strategies/src/indicators/bbawe/: bbawe.cpp
strategies/src/indicators/bollinger/: bollinger.cpp
strategies/src/indicators/cci/: cci.cpp
strategies/src/indicators/cumulativevolumedelta/: cvd.cpp
strategies/src/indicators/dmi/: dmi.cpp
strategies/src/indicators/donchian/: donchian.cpp
strategies/src/indicators/ema/: ema.cpp
strategies/src/indicators/hma/: hma.cpp
strategies/src/indicators/hma3/: hma3.cpp
strategies/src/indicators/ichimoku/: ichimoku.cpp
strategies/src/indicators/imbalance/: barimbalance.cpp
strategies/src/indicators/kahlmanfilter/: kahlmanfilter.cpp
strategies/src/indicators/macd/: macd.cpp
strategies/src/indicators/mama/: mama.cpp
strategies/src/indicators/mmt/: mmt.cpp
strategies/src/indicators/momentum/: momentum.cpp
strategies/src/indicators/pivotpoint/: pivotpoint.cpp
strategies/src/indicators/price/: price.cpp
strategies/src/indicators/rsi/: rsi.cpp
strategies/src/indicators/sar/: sar.cpp
strategies/src/indicators/sinewave/: sinewave.cpp
strategies/src/indicators/sma/: sma.cpp
strategies/src/indicators/stoch/: stoch.cpp
strategies/src/indicators/stochrsi/: stochrsi.cpp
strategies/src/indicators/supertrend/: supertrend.cpp
strategies/src/indicators/td9/: td9.cpp
strategies/src/learning/: learning.cpp  learning.h  stdsupervisor.cpp  supervisor.cpp
strategies/src/live/: live.cpp  live.h
strategies/src/optimization/: optimization.cpp  optimization.h
strategies/src/statistics/: statistics.cpp  statisticstojson.cpp
strategies/src/strategies/: CMakeLists.txt
strategies/src/trade/: assettrade.cpp  breakeven.cpp  dynamicstoploss.cpp  entry.cpp  entryexit.cpp  indmargintrade.cpp  margintrade.cpp  positiontrade.cpp  stdtrademanager.cpp  stoploss.cpp  takeprofit.cpp  trade.cpp  tradeoperation.cpp
strategies/src/utils/: common.cpp  ohlcgen.cpp  rangeohlcgen.cpp  reversalohlcgen.cpp  timeframeohlcgen.cpp
(+688 files in other folders)
