# add here each strategy

add_subdirectory(forexalpha)
#add_subdirectory(cryptoalpha)
#add_subdirectory(bitcoinalpha)
add_subdirectory(indicealpha)
#add_subdirectory(goldalpha)
add_subdirectory(maadx)
# add_subdirectory(hmama)
add_subdirectory(pullback)
# add_subdirectory(maichimoku)
# add_subdirectory(cvp)
