# add here each strategy

# add_subdirectory(bourricot)
add_subdirectory(forexalpha)
add_subdirectory(ichimokust)
add_subdirectory(ichimokustrb)
add_subdirectory(indicealpha)
add_subdirectory(maadx)
add_subdirectory(hmama)
add_subdirectory(pullback)
add_subdirectory(maichimoku)
add_subdirectory(kahlmanfibo)
add_subdirectory(supertrend)
add_subdirectory(supertrendrb)
